--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Vagas</a></li>
-          <li><a href="#">Blog</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="vagas.html">Vagas</a></li>
+          <li><a href="https://www.globalempregos.com.br/blog-do-emprego/" target="_blank">Blog</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><button class='btn btn-danger mt-5' style='float:right; margin-top: 7px;'><span class='glyphicon glyphicon-user'></span> Entrar</button>
+          <li><button class='btn btn-danger mt-5' style='float:right; margin-top: 7px;' onclick='$("#login").modal("show")'><span class='glyphicon glyphicon-user'></span> Entrar</button>
           </ul>
       </div>
     </div>
@@ -39,14 +39,61 @@
           <input class='form-control text-vaga' id='text-vaga'  placeholder="Pesquise por vagas (Cargo, Empresa ou localização)">
           <button class='btn btn-primary btn-search' id='btn-search'><span class='glyphicon glyphicon-search'></span> Pesquisar</button>
   </div>
+  <div class='conteudo'>
+	<div class='container'>
+		<div class='row'>
+			<div class='col-sm-4'>
+				<img src='img/predio.jpg' class='img-responsive'>
+			</div>
+			<div class='col-sm-8'>
+				<h3> Bem vindo ao <b>Vaga</b>Tec o Site de Vagas da Etec</h3>
+				<p align='justify'>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in enim nulla. Nam tincidunt blandit leo, et lobortis lectus tincidunt sed. Nam rhoncus sapien eu ipsum mattis maximus. Fusce id ante at ligula commodo condimentum. Morbi ac enim at tellus pretium tempus. Nunc pulvinar, nibh quis vehicula consectetur, velit dui tristique mauris, sit amet euismod mauris nulla a odio. Nam ullamcorper ligula at justo molestie, a efficitur tortor finibus. Vivamus aliquam est at vulputate suscipit. Nulla sem augue, euismod ut ullamcorper hendrerit, vulputate nec lacus.
+					<br />	<br />	
+					Aliquam erat volutpat. Praesent ipsum magna, commodo in consectetur eu, efficitur vitae tortor. Etiam eget consectetur urna, nec euismod libero. Vestibulum posuere leo non lacinia ornare. Cras non neque faucibus, iaculis ligula nec, pharetra dolor. Pellentesque posuere tellus ut fringilla condimentum. Aenean in mattis erat. Aenean consectetur odio sed ligula faucibus, et lobortis elit luctus. Morbi hendrerit sem id nisi cursus, id pulvinar ante fringilla. Aliquam erat volutpat. Sed ut libero eu urna blandit condimentum vitae id turpis. Nulla pellentesque pellentesque ipsum vel venenatis.
+					<br /> <br />		
+					Cras semper sed est in euismod. Proin interdum viverra orci, vel consectetur mi. Sed nec commodo lorem. Mauris eu vestibulum urna. Cras a est fringilla, ultricies eros sed, sodales purus. Curabitur ac pellentesque orci. Maecenas turpis lectus, posuere vel nunc et, tincidunt dapibus tellus. Quisque id ipsum sed diam mattis sodales.
+				</p>
+			</div>
+		</div>
+	</div>
+  </div>
   <div class='rodape'>
     <hr>
     <center>
       <h3><b>Vaga</b>Tec</h3>
-      2021 Todos os direitos reservados VAgaTec - Site ativo desde 2015<br>
+      2021 Todos os direitos reservados VagaTec - Site ativo desde 2015<br>
       É proibida a reprodução do conteúdo deste site, em qualquer meio, eletrônico ou impresso, sem autorização escrita.
     </center>
   </div>
+  
+  <!-- Modal -->
+<div id="login" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Login</h4>
+      </div>
+      <div class="modal-body">
+        <p>Preencha os campos do formularios para realizar login.</p>
+		<form id='form-login'>
+			Login:
+			<input type='text' name='login' class='form-control' placeholder='E-mail, CPF ou Usuario'>
+			Senha:
+			<input type='password' name='senha' class='form-control' placeholder='Senha'>
+		</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Logar</button>
+		<button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 </body>
 </html>
