ajuste do layout

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <input class='form-control text-vaga' id='text-vaga'  placeholder="Pesquise por vagas (Cargo, Empresa ou localização)">
           <button class='btn btn-primary btn-search' id='btn-search'><span class='glyphicon glyphicon-search'></span> Pesquisar</button>
   </div>
-  <div class='conteudo'>
-	<div class='container'>
+
+	<div class='container' style='margin-top: 51vh'>
 		<div class='row'>
 			<div class='col-sm-4'>
 				<img src='img/predio.jpg' class='img-responsive'>
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 	</div>
-  </div>
+
   <div class='rodape'>
     <hr>
     <center>
